--- a/index.qmd
+++ b/index.qmd
@@ -17,33 +17,31 @@ By the end of this course, you will have gained a fundamental understanding of v
 -   Set up a GitHub account and install the software git (pre-workshop)
 -   Understand the value-add of using version control to manage software and code-based data science projects
 -   Understand the basics of how automated version control systems work
--   Use git, popular command-line version control software, to track local file changes
--   What are remote hosting platforms and why do we use them?
+-   Use git&mdash;popular command-line version control software&mdash;to track local file changes
+-   Understand remote hosting platforms and why do we use them
 -   Connect to GitHub, create a remote repository and push local changes to GitHub
--   Be familiar with the BC Gov Github Organization which has guidelines and requirements for hosting government developed open source repositories.
+-   Be familiar with the [public BC Gov GitHub organization](https://github.com/bcgov) which has guidelines and requirements for hosting government developed open source repositories
 
-The workshop content will follow best practices for version control such as writing descriptive commit messages, including a .gitignore file and tracking relevent project files.
+The workshop content will follow best practices for version control such as writing descriptive commit messages, including a .gitignore file and tracking relevant project files.
 
 ## Who should take this course?
 
--   Anyone looking to solidify their foundational understanding of version control
+-   Anyone looking to solidify their understanding of version control
 -   Anyone keen to learn what git or GitHub is (**no prior experience necessary!**)
 -   Anyone wondering how version control can be used to manage and collaborate on software and code-based data science projects
 
 ## Workshop Schedule
 
-### Daily Schedule (**to be finalized**)
-
 | Activity                                      | Start Time | End Time |
 |-----------------------------------------------|------------|----------|
 | **Session 1. What is version control?**       | 1:00       | 1:30     |
-| **Session 2. Working locally with git**       | 1:30       | 2:15    |
-| BREAK ☕                                      | 2:15       | 2:30    |
-| **Session 3. Working remotely with GitHub**   | 2:30       | 3:15    |
-| **Session 4. The BC Gov GitHub Organization** | 3:15       | 4:00    |
+| **Session 2. Working locally with git**       | 1:30       | 2:15     |
+| BREAK ☕                                      | 2:15       | 2:30     |
+| **Session 3. Working remotely with GitHub**   | 2:30       | 3:15     |
+| **Session 4. The BC Gov GitHub Organization** | 3:15       | 4:00     |
 
-### Pre-Course Work
+## Pre-Course Work
 
 **Important!**
 
-Before the course starts, we ask that all attendees install git and GitBash and have a basic text editor such as Wordpad, Notepad++, or SublimeText. Instructions for how to install these tools are found in the [Introduction to git Section](). If anyone is having troubles getting the software up and running, please contact us **before** the course starts so that we can hit the ground running during the workshop.
+Before the course starts, we ask that all attendees install git and GitBash and have a basic text editor such as Wordpad, Notepad++, Visual Basic Code or Sublime Text. Instructions for how to install these tools are found in [Installation Instructions and Set-Up](https://bcgov.github.io/ds-intro-to-git/pre-workshop/software-install.html). If anyone is having troubles getting the software up and running, please contact us **before** the course starts so that we can hit the ground running during the workshop.
