--- a/index.qmd
+++ b/index.qmd
@@ -18,7 +18,7 @@ By the end of this course, you will have gained a fundamental understanding of v
 -   Understand the value-add of using version control to manage software and code-based data science projects
 -   Understand the basics of how automated version control systems work
 -   Use git&mdash;popular command-line version control software&mdash;to track local file changes
--   Understand remote hosting platforms and why do we use them
+-   Understand remote hosting platforms and why we use them
 -   Connect to GitHub, create a remote repository and push local changes to GitHub
 -   Be familiar with the [public BC Gov GitHub organization](https://github.com/bcgov) which has guidelines and requirements for hosting government developed open source repositories
 
